--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="light_gray">#a2a2a2</color>
     <color name="highlight_text_color">#2196F3</color>
 
+    <color name="imageColor">#DAECE7E7</color>
 
 </resources>
