--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,19 +5,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mainPackage.MainFragment">
+    tools:context=".ui.mainPackage.MainFragment"
+    android:background="#243B55">
 
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
 
-     <ImageView
-         android:id="@+id/imageView"
-         android:layout_width="40dp"
-         android:layout_height="40dp"
-         android:src="@color/black"
+
+     <androidx.constraintlayout.widget.ConstraintLayout
+         android:id="@+id/constraintLayout2"
+         android:layout_width="match_parent"
+         android:layout_height="@dimen/_65sdp"
+         android:background="@drawable/top_background"
+         app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="parent" />
+         app:layout_constraintTop_toTopOf="parent">
+
+
+         <ImageView
+             android:id="@+id/menuImg"
+             android:layout_width="@dimen/_20sdp"
+             android:layout_height="@dimen/_20sdp"
+             android:layout_marginStart="20dp"
+             android:src="@drawable/ic_menu"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent" />
+
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:fontFamily="@font/inter_semibold"
+             android:textColor="@color/white"
+             android:textSize="@dimen/_18sdp"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toStartOf="@+id/infoImg"
+             app:layout_constraintStart_toEndOf="@+id/menuImg"
+             app:layout_constraintTop_toTopOf="parent"
+             tools:text="Rahul" />
+
+
+         <ImageView
+             android:id="@+id/infoImg"
+             android:layout_width="@dimen/_20sdp"
+             android:layout_height="@dimen/_20sdp"
+             android:layout_marginEnd="20dp"
+             android:src="@drawable/ic_info"
+             app:layout_constraintBottom_toBottomOf="parent"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toTopOf="parent" />
+
+
+     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+     <androidx.recyclerview.widget.RecyclerView
+         android:id="@+id/recyclerView"
+         android:layout_width="match_parent"
+         android:layout_height="0dp"
+         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+         app:layout_constraintVertical_bias="0.0" />
+
+     <LinearLayout
+         android:id="@+id/linearLayout"
+         android:layout_width="match_parent"
+         android:layout_height="70dp"
+         android:background="#1E2632"
+         android:elevation="5dp"
+         android:orientation="horizontal"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent">
+
+         <ImageView
+             android:layout_width="0dp"
+             android:layout_height="35dp"
+             android:layout_gravity="center"
+             android:layout_weight="1"
+             android:src="@drawable/chat_img" />
+
+         <ImageView
+             android:layout_width="0dp"
+             android:layout_height="45dp"
+             android:layout_gravity="center"
+             android:layout_weight="1"
+             android:src="@drawable/add_post" />
+
+         <ImageView
+             android:layout_width="0dp"
+             android:layout_height="35dp"
+             android:layout_gravity="center"
+             android:layout_weight="1"
+             android:src="@drawable/ic_video_call" />
+
+     </LinearLayout>
+
 
 
  </androidx.constraintlayout.widget.ConstraintLayout>
