--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -190,6 +190,26 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="sideMenuImage">
+        <item name="android:layout_width">@dimen/_22sdp</item>
+        <item name="android:layout_height">@dimen/_22sdp</item>
+        <item name="android:layout_gravity">start|center_vertical</item>
+        <item name="tint">@color/imageColor</item>
+    </style>
+
+
+    <style name="sideMenuText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textColor">@color/imageColor</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">@dimen/_16sdp</item>
+        <item name="android:layout_weight">.3</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
 
 
 </resources>
