--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -35,6 +35,7 @@
 
 
          <TextView
+             android:id="@+id/userName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/inter_semibold"
