--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -91,6 +91,7 @@
              android:src="@drawable/chat_img" />
 
          <ImageView
+             android:id="@+id/addPost"
              android:layout_width="0dp"
              android:layout_height="45dp"
              android:layout_gravity="center"
