--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -34,5 +34,30 @@
         android:id="@+id/mainFragment"
         android:name="com.example.socialmediaapplicaition.ui.mainPackage.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_createPostFragmnet"
+            app:destination="@id/createPostFragmnet" />
+        <action
+            android:id="@+id/action_mainFragment_to_blankFragment"
+            app:destination="@id/blankFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.example.socialmediaapplicaition.ui.chatFragment.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
+    <fragment
+        android:id="@+id/createPostFragmnet"
+        android:name="com.example.socialmediaapplicaition.ui.createPost.CreatePostFragment"
+        android:label="fragment_create_post_fragmnet"
+        tools:layout="@layout/fragment_create_post_fragmnet" />
+    <fragment
+        android:id="@+id/blankFragment"
+        android:name="com.example.socialmediaapplicaition.ui.infoPackage.InfoFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_info" />
 </navigation>
