--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -107,6 +107,17 @@
 
      </LinearLayout>
 
+     <ProgressBar
+        android:visibility="gone"
+         android:id="@+id/progress_bar"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:indeterminate="true"
+         app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+         app:layout_constraintEnd_toEndOf="@+id/recyclerView"
+         app:layout_constraintStart_toStartOf="@+id/recyclerView"
+         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
 
  </androidx.constraintlayout.widget.ConstraintLayout>
