fetch data for post done
fetch data for post is done

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.socialmediaapplicaition.ui.mainPackage.MainFragment"
+        android:name="com.example.socialmediaapplicaition.ui.postPackage.PostFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
