--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mainPackage.MainFragment"
+    tools:context=".ui.postPackage.PostFragment"
     android:background="#243B55">
 
  <androidx.constraintlayout.widget.ConstraintLayout
