--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,120 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.chatFragment.ChatFragment"
-    android:background="@drawable/chat_background">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="35dp"
-        android:elevation="5dp"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Chats"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_18sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/ic_top_crcle"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView"
-        android:layout_marginTop="10dp"
-        android:elevation="5dp"/>
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_marginLeft="-18dp"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/shadow_layout"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="-10dp"
-        android:layout_marginRight="-10dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_message_vector"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent=".4" />
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/searchText"
-        style="@style/cardViewLayout"
-        android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Search note ">
-
-            <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginVertical="2dp"
-                android:layout_marginStart="10dp"
-                android:background="@null"
-                android:padding="2dp"
-                android:src="@drawable/ic_search"
-                app:tint="@color/grey" />
-
-            <EditText
-                android:id="@+id/searchEdt"
-                style="@style/searchbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="10dp"
-                android:backgroundTint="@android:color/transparent"
-                android:gravity="start"
-                android:hint="Search"
-                android:imeOptions="actionSearch"
-                android:inputType="text"
-                android:maxLength="15"
-                android:maxLines="1" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchText" />
-
+    tools:context=".ui.chatFragment.ChatFragment">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
