--- a/app/src/main/res/layout/fragment_list_chat.xml
+++ b/app/src/main/res/layout/fragment_list_chat.xml
@@ -112,6 +112,8 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/layout_history_chat"
+        android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchText" />
 
